fix: menu icon alignment

--- a/src/css/common/outline/header/menu.css
+++ b/src/css/common/outline/header/menu.css
@@ -144,6 +144,10 @@
           max-width: 100%;
         }
       }
+      
+      & .faa-parent {
+        vertical-align: middle;
+      }
     }
   }
 
